gestion des écrans petits -400px

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site du cafe</title>
     <link rel="stylesheet" href="CSS/styleIndex.css">
+    <link rel="stylesheet" href="CSS/GestionEcran.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -27,7 +28,7 @@
             <p class="get">get started</p>
         </div>
         <div id="Corps">
-            <p class="image-coke"><img src="images/cobellet.png" alt="cobellet"></p>
+            <img src="images/cobellet.png" alt="cobellet">
             <p class="why">why choose us ?</p>
             <h2>The best coffee Maker In The Town</h2>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque. Doloribus doloremque placeat nostrum, corrupti perspiciatis autem quia exercitationem odio dolor laborum culpa nisi reiciendis quas sit? Facilis, sunt necessitatibus?</p>
@@ -179,8 +180,8 @@
             <h1>NEWSLETTER</h1>
             <h4>subscribe for latest updates</h4>
             <div class="button">
-                <input type="email" name="send_email" placeholder="enter your email">
-                <button class="get">subscribe</button>
+                <input type="email" name="send_email" placeholder="enter your email" class="send">
+                <input type="button" value="subscribe" id="valide">
             </div>
         </div>
         <div id="fin">
